Issue #SB-14460 alignment issues fixed

--- a/src/app/client/src/app/modules/shared-feature/components/sso-merge-confirmation/sso-merge-confirmation.component.scss
+++ b/src/app/client/src/app/modules/shared-feature/components/sso-merge-confirmation/sso-merge-confirmation.component.scss
@@ -6,8 +6,11 @@
     }
   }
 }
+.sb-merged-account-body-header{
+  font-size: 18px;
+}
 .sb-list-items{
   text-align: left;
     list-style-type: initial;
-    line-height: 20px;
+    line-height: normal;
 }
